--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.LifeBookAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".NewEventPage"
+            android:exported="false" />
+        <activity
+            android:name=".calendarPage"
+            android:exported="false"
+            android:label="@string/title_activity_calendar_page"
+            android:theme="@style/Theme.LifeBookAndroid" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
